--- a/aqua-engine/aqua-engine.vcxproj
+++ b/aqua-engine/aqua-engine.vcxproj
@@ -43,7 +43,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -109,6 +109,8 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>$(ProjectDir)engine\include</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -154,12 +156,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="engine\directx\wrapper\Device.h" />
-    <ClInclude Include="engine\directx\wrapper\Factory.h" />
+    <Folder Include="engine\src\" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="engine\directx\wrapper\Device.cpp" />
-    <ClCompile Include="engine\directx\wrapper\Factory.cpp" />
+    <ClInclude Include="engine\include\directx\wrapper\Device.h" />
+    <ClInclude Include="engine\include\directx\wrapper\Factory.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
