--- a/aqua-engine/CMakeLists.txt
+++ b/aqua-engine/CMakeLists.txt
@@ -9,6 +9,12 @@ set(SRC
         src/directx/wrapper/Command.cpp
         src/directx/wrapper/Fence.cpp
         src/directx/wrapper/SwapChain.cpp
+        src/directx/wrapper/DescriptorHeap.cpp
+        src/directx/descriptor_heap/DescriptorHeapSegment.cpp
+        src/directx/descriptor_heap/DescriptorHeapSegmentManager.cpp
+        src/directx/descriptor_heap/GlobalDescriptorHeap.cpp
+        src/directx/descriptor_heap/ShaderGlobalDescriptorHeap.cpp
+        src/directx/descriptor_heap/GlobalDescriptorHeapManager.cpp
 )
 
 set(INCLUDE
@@ -18,6 +24,13 @@ set(INCLUDE
         include/directx/wrapper/Command.h
         include/directx/wrapper/Fence.h
         include/directx/wrapper/SwapChain.h
+        include/directx/wrapper/DescriptorHeap.h
+        include/directx/descriptor_heap/DescriptorHeapSegment.h
+        include/directx/descriptor_heap/DescriptorHeapSegmentManager.h
+        include/directx/descriptor_heap/GlobalDescriptorHeap.h
+        include/directx/descriptor_heap/ShaderGlobalDescriptorHeap.h
+        include/directx/descriptor_heap/GlobalDescriptorHeapManager.h
+        include/directx/descriptor_heap/HeapID.h
 )
 
 add_library(aqua-engine STATIC ${SRC} ${INCLUDE})
