--- a/aqua-engine/CMakeLists.txt
+++ b/aqua-engine/CMakeLists.txt
@@ -15,6 +15,7 @@ set(SRC
         src/directx/descriptor_heap/GlobalDescriptorHeap.cpp
         src/directx/descriptor_heap/ShaderGlobalDescriptorHeap.cpp
         src/directx/descriptor_heap/GlobalDescriptorHeapManager.cpp
+        src/directx/buffer/Buffer.cpp
 )
 
 set(INCLUDE
@@ -31,6 +32,7 @@ set(INCLUDE
         include/directx/descriptor_heap/ShaderGlobalDescriptorHeap.h
         include/directx/descriptor_heap/GlobalDescriptorHeapManager.h
         include/directx/descriptor_heap/HeapID.h
+        include/directx/buffer/Buffer.h
 )
 
 add_library(aqua-engine STATIC ${SRC} ${INCLUDE})
