--- a/aqua-engine/CMakeLists.txt
+++ b/aqua-engine/CMakeLists.txt
@@ -18,6 +18,8 @@ set(SRC
         src/directx/buffer/Buffer.cpp
         src/directx/buffer/BufferView.cpp
         src/directx/buffer/RenderTargetView.cpp
+        src/directx/BackBuffers.cpp
+        src/directx/wrapper/Barrier.cpp
 )
 
 set(INCLUDE
@@ -37,6 +39,8 @@ set(INCLUDE
         include/directx/buffer/Buffer.h
         include/directx/buffer/BufferView.h
         include/directx/buffer/RenderTargetView.h
+        include/directx/BackBuffers.h
+        include/directx/wrapper/Barrier.h
 )
 
 add_library(aqua-engine STATIC ${SRC} ${INCLUDE})
