--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,3 +67,10 @@ add_dependencies(sample-triangle aqua-engine)
 target_include_directories(sample-triangle PUBLIC aqua-engine/include)
 target_link_libraries(sample-triangle aqua-engine)
 file(COPY sample/triangle/vs.hlsl sample/triangle/ps.hlsl DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+
+add_executable(sample-texture WIN32 sample/texture/Graphics.cpp sample/texture/Graphics.h
+        sample/texture/main.cpp)
+add_dependencies(sample-texture aqua-engine)
+target_include_directories(sample-texture PUBLIC aqua-engine/include)
+target_link_libraries(sample-texture aqua-engine)
+#file(COPY sample/texture/vs.hlsl sample/texture/ps.hlsl DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
