--- a/aqua-engine/CMakeLists.txt
+++ b/aqua-engine/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.29)
 project(aqua-engine CXX)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 
 set(SRC
         src/directx/wrapper/Device.cpp
@@ -35,7 +35,7 @@ set(SRC
         src/directx/mesh/RectangleTexture.cpp
         src/directx/mesh/Mesh.cpp
         src/directx/Camera.cpp
-        include/directx/Camera.h
+        src/fbx/FbxManager.cpp
 )
 
 set(INCLUDE
@@ -71,14 +71,18 @@ set(INCLUDE
         include/directx/TextureManager.h
         include/directx/mesh/RectangleTexture.h
         include/directx/mesh/Mesh.h
-        src/directx/Camera.cpp
         include/directx/Camera.h
+        include/fbx/FbxManager.h
 )
 
 add_library(aqua-engine STATIC ${SRC} ${INCLUDE})
 target_include_directories(aqua-engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_include_directories(aqua-engine PUBLIC $ENV{DXTEX_DIR})
+target_include_directories(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/include)
 target_link_libraries(aqua-engine INTERFACE $ENV{Windows_SDK_Lib}/d3d12.lib)
 target_link_libraries(aqua-engine INTERFACE $ENV{Windows_SDK_Lib}/dxgi.lib)
 target_link_libraries(aqua-engine INTERFACE $ENV{Windows_SDK_Lib}/d3dcompiler.lib)
 target_link_libraries(aqua-engine INTERFACE $ENV{DXTEX_DIR}/Bin/Desktop_2022_Win10/x64/Debug/DirectXTex.lib)
+target_link_libraries(aqua-engine INTERFACE $ENV{FBXSDK_DIR}/lib/x64/debug/libfbxsdk-md.lib)
+target_link_libraries(aqua-engine INTERFACE $ENV{FBXSDK_DIR}/lib/x64/debug/libxml2-md.lib)
+target_link_libraries(aqua-engine INTERFACE $ENV{FBXSDK_DIR}/lib/x64/debug/zlib-md.lib)
