--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -23,13 +23,11 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Configure Vcpkg
-      run: | 
-        git clone https://github.com/microsoft/vcpkg.git
-        ./vcpkg/bootstrap-vcpkg.sh
+      run: git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
 
     - name: Install Dependencies
       run: |
-        ./vcpkg/vcpkg install --triplet x64-windows
+        ./vcpkg/vcpkg.exe install --triplet x64-windows
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
