--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -23,7 +23,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Configure Vcpkg
-      run: git clone https://github.com/microsoft/vcpkg.git && ./vcpkg/bootstrap-vcpkg.sh
+      run: | 
+        git clone https://github.com/microsoft/vcpkg.git
+        ./vcpkg/bootstrap-vcpkg.sh
+        dir vcpkg
 
     - name: Install Dependencies
       run: |
