--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -4,7 +4,7 @@ name: Build and Test
 
 on:
   workflow_run:
-    workflows: [FBX SDK]
+    workflows: [Upload data]
     types:
       - completed
 
