--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -11,6 +11,7 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
+  FBXSDK_DIR: C:\FBXSDK
 
 jobs:
   build:
@@ -32,7 +33,6 @@ jobs:
     - name: Configure FBXSDK
       run: |
         dir C:\FBXSDK
-        echo "FBXSDK_DIR=C:\FBXSDK" >> $GITHUB_ENV
 
     - name: Configure Vcpkg
       run: | 
