--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -5,6 +5,11 @@ on:
   pull_request:
     branches: [ 'main' ]
 
+env:
+  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
+  BUILD_TYPE: Release
+  FBXSDK_DIR: C:\FBXSDK
+
 jobs:
   analyze:
     runs-on: windows-latest
@@ -22,8 +27,23 @@ jobs:
       with:
           languages: ${{ matrix.language }}
 
-    - name: Autobuild
-      run: cmake -S . -B build && cmake --build build
+    - name: Download FBXSDK
+      run: curl -L -o fbx202037_fbxsdk_vs2022_win.exe -A "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/58.0.3029.110 Safari/537.36" "https://damassets.autodesk.net/content/dam/autodesk/www/files/fbx202037_fbxsdk_vs2022_win.exe"
+
+    - name: Install FBXSDK
+      run: fbx202037_fbxsdk_vs2022_win.exe /S /D=C:\FBXSDK
+      shell: cmd
+
+    - name: Vcpkg
+      run: |
+        git clone https://github.com/microsoft/vcpkg.git
+        ./vcpkg/bootstrap-vcpkg.bat
+        ./vcpkg/vcpkg.exe install --triplet x64-windows
+
+    - name: Build
+      run: |
+        cmake -S ${{github.workspace}} -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_TOOLCHAIN_FILE=${{github.workspace}}/vcpkg/scripts/buildsystems/vcpkg.cmake -DLOCAL_BUILD=OFF
+        cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
