fix animation, issue #nanika add sample

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,3 +89,18 @@ if (LOCAL_BUILD) # fbx and png: local only
     message(STATUS "copy fbx files.")
 endif ()
 message(STATUS "copy vs.hlsl and ps.hlsl to ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/sample/light)
+add_executable(sample-light WIN32 sample/light/main.cpp sample/light/Graphics.cpp sample/light/Graphics.h
+        sample/light/BaseWindow.h
+        sample/light/MainWindow.cpp
+        sample/light/MainWindow.h)
+add_dependencies(sample-light aqua-engine)
+target_include_directories(sample-light PUBLIC aqua-engine/include)
+target_link_libraries(sample-light aqua-engine)
+file(COPY sample/light/vs.hlsl sample/light/ps.hlsl sample/light/type.hlsli DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+if (LOCAL_BUILD) # fbx and png: local only
+    file(COPY sample/light/isu.fbx sample/light/isu.png sample/light/ninja.fbx sample/light/ninja.png DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+    message(STATUS "copy fbx files.")
+endif ()
+message(STATUS "copy vs.hlsl and ps.hlsl to ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
