--- a/aqua-engine/CMakeLists.txt
+++ b/aqua-engine/CMakeLists.txt
@@ -40,6 +40,8 @@ set(SRC
         src/directx/mesh/fbx/FBXModel.cpp
         src/directx/DirectionLight.cpp
         src/directx/mesh/SkyBox.cpp
+        include/directx/MultiPassRenderer.cpp
+        include/directx/MultiPassRenderer.h
 )
 
 set(INCLUDE
@@ -80,6 +82,8 @@ set(INCLUDE
         include/directx/mesh/fbx/FBXModel.h
         include/directx/DirectionLight.h
         include/directx/mesh/SkyBox.h
+        include/directx/MultiPassRenderer.cpp
+        include/directx/MultiPassRenderer.h
 )
 
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099")
