--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,14 +88,14 @@ function(create_sample name files)
     set(src_files ${ARGV})
     list(REMOVE_AT src_files 0)
     foreach (src_file IN LISTS src_files)
-        if (src_file MATCHES ".*\\.(cpp|c|cc|cxx|h|hpp)")
+        if (src_file MATCHES ".*\\.(cpp|c|cc|cxx|h|hpp)$")
             list(APPEND src_list ${src_file})
         endif ()
-        if (src_file MATCHES ".*\\.(hlsl|hlsli)")
+        if (src_file MATCHES ".*\\.(hlsl|hlsli)$")
             file(COPY ${src_file} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
         endif ()
         if (LOCAL_BUILD)
-            if (src_file MATCHES ".*\\.(fbx|png|hdr)")
+            if (src_file MATCHES ".*\\.(fbx|png|hdr)$")
                 file(COPY ${src_file} DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
             endif ()
         endif ()
