--- a/aqua-engine/CMakeLists.txt
+++ b/aqua-engine/CMakeLists.txt
@@ -93,9 +93,9 @@ find_package(directxtex CONFIG REQUIRED)
 add_library(aqua-engine STATIC ${SRC} ${INCLUDE})
 target_include_directories(aqua-engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 target_include_directories(aqua-engine PUBLIC $ENV{FBXSDK_DIR}/include)
-target_link_libraries(aqua-engine PUBLIC $ENV{Windows_SDK_Lib}/d3d12.lib)
-target_link_libraries(aqua-engine PUBLIC $ENV{Windows_SDK_Lib}/dxgi.lib)
-target_link_libraries(aqua-engine PUBLIC $ENV{Windows_SDK_Lib}/d3dcompiler.lib)
+target_link_libraries(aqua-engine PUBLIC d3d12.lib)
+target_link_libraries(aqua-engine PUBLIC dxgi.lib)
+target_link_libraries(aqua-engine PUBLIC d3dcompiler.lib)
 target_link_libraries(aqua-engine PUBLIC Microsoft::DirectXTex)
 
 if (LOCAL_BUILD)
